--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "multiselect-react-dropdown": "^1.5.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
