--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "lodash": "^4.17.20",
     "multiselect-react-dropdown": "^1.5.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
